[package]
authors = ['Compound <https://compound.finance>']
description = 'Pallet for implementing CASH.'
edition = '2018'
homepage = 'https://compound.cash'
name = 'pallet-cash'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
ethabi = { version = "12.0.0", default-features = false }
frame-support = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
frame-system = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
hex = { version = "0.4.2", default-features = false }
hex-literal = {version = "0.3.1", default-features = false}
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"] }
runtime-interfaces = { default-features = false, version = '1.0.0', path='../runtime-interfaces'}
sp-application-crypto = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
sp-core = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
sp-io = { version = '2.0.0', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a', features = ["disable_oom", "disable_panic_handler"]}
sp-runtime = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
sp-std = { default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', rev = 'dcf6a3a' }
tiny-keccak = { version = "2.0.0", features = ["keccak"], default-features = false }

ethereum-client = { path = "../../ethereum_client", version = '0.1.0', default-features = false}



[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "libsecp256k1/std",
    'runtime-interfaces/std',
    "sp-core/std",
		'sp-io/std',
    "sp-std/std",
]
