[package]
authors = ['Compound <https://compound.finance>']
description = 'Pallet for implementing CASH.'
edition = '2018'
homepage = 'https://compound.cash'
name = 'pallet-cash'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
serde = { version = "1.0.101", features = ["derive"], default-features = false }
serde_json = { version = "1.0.58", features=["alloc"], default-features = false}

frame-support = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
frame-system = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
sp-core = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
sp-io = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git', features = ["disable_oom", "disable_panic_handler"]}
sp-runtime = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
ethabi = { version = "12.0.0", default-features = false }
ethereum-types = { version = "0.11.0", default-features = false }
hex = { version = "0.4.2", default-features = false }
hex-literal = {version = "0.3.1", default-features = false}
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"] }
tiny-keccak = { version = "2.0.0", features = ["keccak"], default-features = false }
pallet-session = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git' }
pallet-timestamp = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git' }

num-bigint = { default-features = false, version = "0.3" }
num-traits = { default-features = false, version = "0.2" }
anyhow = { version = "1.0", default-features = false }

runtime-interfaces = { path = '../runtime-interfaces', default-features = false }
ethereum-client = { path = "../../ethereum-client", default-features = false }
compound-crypto = { path = '../../compound-crypto', default-features = false }
trx-request = { path = '../../trx-request', default-features = false }
our-std = { path = "../../std", default-features = false }
parking_lot = "0.11.1"
lazy_static = "1.4.0"
either = { version = "1.6.1", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'runtime-interfaces/std',
    'compound-crypto/std',
    'pallet-session/std',
    'sp-io/std',
    'sp-core/std',
    'sp-runtime/std',
    'serde/std'
]
