[package]
authors = ['Compound <https://compound.finance>']
description = 'Pallet for implementing CASH.'
edition = '2018'
homepage = 'https://compound.cash'
name = 'pallet-cash'
repository = 'https://github.com/compound-finance/gateway/'
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
serde = { version = '1.0.101', features = ['derive'], default-features = false }
serde_json = { version = '1.0.58', features=['alloc'], default-features = false}

num-bigint = { default-features = false, version = '0.3' }
num-traits = { default-features = false, version = '0.2' }
lazy_static = '1.4.0'
parking_lot = '0.11.1'

ethabi = { version = '12.0.0', default-features = false }
ethereum-types = { version = '0.11.0', default-features = false }
hex = { version = '0.4.2', default-features = false }
hex-literal = {version = '0.3.1', default-features = false}
libsecp256k1 = { version = '0.3.2', default-features = false, features = ['hmac'] }
tiny-keccak = { version = '2.0.0', features = ['keccak'], default-features = false }

sp-core = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master'  }
sp-io = { default-features = false, features = ['disable_oom', 'disable_panic_handler'], git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-inherents = { default-features = false, git = 'https://github.com/compound-finance/substrate.git', branch = 'master' }
sp-runtime = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-benchmarking = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master', optional = true }
frame-support = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-system = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-session = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-timestamp = { default-features = false, git = 'https://github.com/compound-finance/substrate.git', branch= 'master' }

pallet-oracle = { path = '../oracle', default-features = false }
runtime-interfaces = { path = '../runtime-interfaces', default-features = false }
ethereum-client = { path = '../../ethereum-client', default-features = false }
gateway-crypto = { path = '../../gateway-crypto', default-features = false }
trx-request = { path = '../../trx-request', default-features = false }
our-std = { path = '../../our-std', default-features = false }

types-derive = { path = '../../types-derive' }

[dev-dependencies]
frame-benchmarking = { git = 'https://github.com/compound-finance/substrate', branch = 'master'}
serial_test = "*"

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'runtime-interfaces/std',
    'gateway-crypto/std',
    'our-std/std',
    'pallet-session/std',
    'pallet-oracle/std',
]
runtime-debug = ['our-std/runtime-debug']
runtime-benchmarks = ['frame-benchmarking']
