[package]
name = "config"
version = "0.1.0"
authors = ["Compound"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime-interface = {version="2.0.0", default-features=false}
sp-externalities = {version="0.8.0", default-features=false}
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
lazy_static = "1.4.0"

[features]
default = ['std']
std = [
    "sp-runtime-interface/std",
    "sp-externalities/std",
]
