[package]
authors = ['Compound <https://compound.finance>']
description = 'Pallet for implementing CASH runtime interfaces.'
edition = '2018'
homepage = 'https://compound.cash'
name = 'runtime-interfaces'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '1.0.0'

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
lazy_static = '1.4.0'

sp-runtime-interface = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-externalities = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-io = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

compound-crypto = { path = "../../compound-crypto", default-features = false }
our-std = { path = "../../our-std", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-externalities/std',
    'sp-io/std',
    'sp-runtime-interface/std',
    'compound-crypto/std',
]
