[package]
authors = ['Compound <https://compound.finance>']
description = 'Cryptographic operations for compound chain'
edition = '2018'
homepage = 'https://compound.cash'
name = 'open-oracle-mock-reporter'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '0.1.0'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.3.2"
rocket = "0.4.6"
compound-crypto = { path = "../../compound-crypto" }
hex = "0.4.2"
serde = "1.0.118"
serde_json = "1.0.61"
chrono = "0.4.19"
ethabi = "13.0.0"
rocket_contrib = "0.4.6"
