[package]
authors = ['Compound <https://compound.finance>']
description = 'Cryptographic operations for compound chain'
edition = '2018'
homepage = 'https://compound.cash'
name = 'open-oracle-mock-reporter'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '0.1.0'

[dependencies]
chrono = "0.4.19"
ethabi = "11.0.0"
hex = "0.4.2"
libsecp256k1 = "0.3.2"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0.118"
serde_json = "1.0.61"

compound-crypto = { path = "../../compound-crypto" }
